[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/BalsamiqSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/art/heart_full.png" type="Texture" id=2]
[ext_resource path="res://assets/art/coin.png" type="Texture" id=3]
[ext_resource path="res://scripts/ShopButton.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "MouseOver"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.189464, 0.287175 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.0253829, 1 ),
"update": 0,
"values": [ Color( 0.203922, 0.211765, 0.329412, 1 ), Color( 0.27451, 0.282353, 0.423529, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer/VBoxContainer/BuyLabel:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.108819, 1 ),
"update": 0,
"values": [ Color( 0.713726, 0.713726, 0.713726, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HBoxContainer/ItemSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 0.0824693, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="ShopButton" type="ColorRect"]
margin_right = 351.0
margin_bottom = 120.0
rect_min_size = Vector2( 250, 120 )
rect_pivot_offset = Vector2( 150, 60 )
color = Color( 0.203922, 0.211765, 0.329412, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MouseOver = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSprite" type="TextureRect" parent="HBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 194.0
margin_bottom = 112.0
size_flags_horizontal = 3
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 198.0
margin_right = 335.0
margin_bottom = 112.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 137.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.713726, 0.713726, 0.713726, 1 )
text = "Buy Heart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 137.0
margin_bottom = 70.0
mouse_filter = 2
alignment = 2

[node name="CostLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 0.75, 0.75, 0.75, 1 )
margin_left = 74.0
margin_right = 97.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.854902, 0.854902, 0.854902, 1 )
text = "15"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 101.0
margin_right = 137.0
margin_bottom = 30.0
mouse_filter = 2
texture = ExtResource( 3 )

[connection signal="mouse_entered" from="." to="." method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ColorRect_mouse_exited"]
